Z-index panel fix for bug

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ body.search #talkToAgent {
   font-size: 18pt;
   overflow-y: auto;
   transition: left 300ms ease-in-out;
+  z-index: 1000;
 }
 
 #nerdyRenderPanel {
